--- a/style_website.scss
+++ b/style_website.scss
@@ -1,4 +1,3 @@
-
 /*-- scss:defaults --*/
 
 
@@ -7,33 +6,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 $font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$font-family-serif:  "Times New Roman", Georgia, Garamond !default;
-$font-family-monospace : "Roboto Mono", "Courier New", monospace !default;
+$font-family-monospace : "Roboto Mono",
+"Courier New",
+monospace !default;
 
 
 /* css styles */
 
 
-
 /*change bullet points*/
 
-#education, #research-experience {
+#quarto-content {
+    font-family: $font-family-sans-serif;
+}
+
+
+#education,
+#research-experience {
 
     h2 {
         font-weight: 600;
         margin-bottom: 2pt;
     }
 
-    p{
+    p {
         margin-bottom: 0pt;
         font-family: $font-family-sans-serif;
-        }
 
-    ul{
-        list-style-type:circle;
     }
 
-    ul li{
+    ul {
+        list-style-type: circle;
+
+    }
+
+    ul li {
         margin-left: -2.5pt;
     }
 
