--- a/style_website.scss
+++ b/style_website.scss
@@ -1,40 +1,39 @@
 
 /*-- scss:defaults --*/
 
-
-
-/* Font settings*/
+/* Font settings */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 $font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $font-family-serif:  "Times New Roman", Georgia, Garamond !default;
 $font-family-monospace : "Roboto Mono", "Courier New", monospace !default;
 
+/* Ensure all text uses the same font */
+body, h1, h2, h3, h4, h5, h6, p, span, div, li, a {
+    font-family: $font-family-sans-serif !important;
+}
 
-/* css styles */
 
+/* Apply font to entire website */
+body {
+    font-family: $font-family-sans-serif;
+}
 
+/* Change bullet points for all sections */
+ul {
+    list-style-type: circle;
+}
 
-/*change bullet points*/
+ul li {
+    margin-left: -2.5pt;
+}
 
-#education, #research-experience {
+/* Ensure headings and paragraphs have consistent styles */
+h2 {
+    font-weight: 600;
+    margin-bottom: 2pt;
+}
 
-    h2 {
-        font-weight: 600;
-        margin-bottom: 2pt;
-    }
-
-    p{
-        margin-bottom: 0pt;
-        font-family: $font-family-sans-serif;
-        }
-
-    ul{
-        list-style-type:circle;
-    }
-
-    ul li{
-        margin-left: -2.5pt;
-    }
-
+p {
+    margin-bottom: 0pt;
 }
